Added freetype dependency

--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -41,6 +41,12 @@ task dist(type: Jar) {
     with jar
 }
 
+dependencies {
+    implementation 'com.badlogicgames.gdx:gdx-freetype:1.11.0'
+    implementation 'com.badlogicgames.gdx:gdx-freetype-platform:1.11.0'
+    implementation 'com.github.intrigus.gdx-freetype-gwt:gdx-freetype-gwt:1.9.10.1'
+}
+
 
 dist.dependsOn classes
 
