--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,4 +1,8 @@
 sourceCompatibility = 1.7
+dependencies {
+    implementation 'com.badlogicgames.gdx:gdx-freetype:1.11.0'
+    implementation 'com.badlogicgames.gdx:gdx-freetype-platform:1.11.0'
+}
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 sourceSets.main.java.srcDirs = [ "src/" ]
